--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,7 +1,7 @@
 <div class="row description">
     <div class="col-sm-2">
       <div class="image">
-      <img src="albumInfo.album.coverImage" alt="product image"   />
+      <img src="https://i0.wp.com/liveforlivemusic.com/wp-content/uploads/2016/02/musicbrain.jpg?fit=610%2C439&ssl=1" alt="product image"   />
       </div>
     </div>
     <div class="col-sm-6">
