--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,12 +1,12 @@
 <div class="row description">
-    <div class="col-sm-2">
-      <div class="image">
-      <img src="https://i0.wp.com/liveforlivemusic.com/wp-content/uploads/2016/02/musicbrain.jpg?fit=610%2C439&ssl=1" alt="product image"   />
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <p class="album-name">{{albumInfo?.album.name}}</p>
-      <p class="band-name">{{albumInfo?.artist}}</p>
-      <p class="album-release-date">{{albumInfo?.album.releaseDate}}</p>
+  <div class="col-sm-2">
+    <div class="image">
+      <img src="http://campus.codeschool.com/front_end_foundations/assets/demo/level4-section1-fixing-the-heading-tags/images/prependers/opacity-zero.jpg" alt="product image" />
     </div>
   </div>
+  <div class="col-sm-6">
+    <p class="album-name">{{albumInfo?.album.name}}</p>
+    <p class="band-name">{{albumInfo?.artist}}</p>
+    <p class="album-release-date">{{albumInfo?.album.releaseDate}}</p>
+  </div>
+</div>
