--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,7 +1,7 @@
 <div class="row description">
   <div class="col-sm-2">
     <div class="image">
-      <img src="http://campus.codeschool.com/front_end_foundations/assets/demo/level4-section1-fixing-the-heading-tags/images/prependers/opacity-zero.jpg" alt="product image" />
+      <img src="{{albumInfo?.album.coverImage}}" alt="product image" />
     </div>
   </div>
   <div class="col-sm-6">
